fix for IE details overlapping the graph

--- a/client/src/panels/historical_auth_exp/auth_exp_prog_spending.scss
+++ b/client/src/panels/historical_auth_exp/auth_exp_prog_spending.scss
@@ -11,6 +11,7 @@
   justify-content: space-between;
 
   & > .pagedetails__gap_explain {
+    width: 100%;
     background-color: $backgroundColor;
     border-radius: 10px;
     border: 2px solid $primaryColor;
